<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/c"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/intro"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_description"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/customerName"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:onClick="decrement"
                android:text="-"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:onClick="increment"
                android:text="+"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="reset"
                android:text="RESET"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/Extras"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:buttonTint="@color/black"
            android:onClick="checkBox"
            android:scaleX="1.05"
            android:scaleY="1.05"
            android:text="@string/Extras1"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:buttonTint="@color/black"
            android:onClick="checkBox"
            android:scaleX="1.05"
            android:scaleY="1.05"
            android:text="@string/Extras2"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitOrder"
            android:text="ORDER"/>


    </LinearLayout>
</ScrollView>